Phase 5 complete: Event-driven architecture with Kafka, Redis caching, and full frontend audit